--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,9 @@ body {
   background-color: #f7f7f7;
   -webkit-font-smoothing: antialiased;
 }
+.wow {
+  visibility: hidden;
+}
 /*=TEXT=*/
 strong {
   font-weight: bold;
@@ -327,7 +330,6 @@ h4 {
   width: 265px;
   height: 115px;
 }
-/*lists*/
 /*=LINKS&FORMS=*/
 a,
 button {
@@ -509,6 +511,9 @@ a.page:focus {
 .form-group {
   margin-bottom: 30px;
 }
+.form-group-big {
+  margin-bottom: 50px;
+}
 .form-control {
   display: block;
   -webkit-box-sizing: border-box;
@@ -557,33 +562,42 @@ a.page:focus {
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
+.form-control-light {
+  border: 1px solid #ffffff;
+  padding-left: 30px;
+  padding-right: 30px;
+}
 .form-control-light::-webkit-input-placeholder {
-  font-size: 16px;
-  color: #000000;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
 .form-control-light::-moz-placeholder {
-  font-size: 16px;
-  color: #000000;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
 .form-control-light:-moz-placeholder {
-  font-size: 16px;
-  color: #000000;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
   transition: all ease 0.3s;
 }
 .form-control-light:-ms-input-placeholder {
-  font-size: 16px;
-  color: #000000;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
   -webkit-transition: all ease 0.3s;
   -moz-transition: all ease 0.3s;
   -o-transition: all ease 0.3s;
@@ -646,14 +660,12 @@ a.page:focus {
 .form-control:focus:-ms-input-placeholder {
   opacity: 0.3;
 }
-textarea.form-control {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  height: 186px;
-}
 .form-disclaimer {
   font-size: 14px;
   line-height: 1.3;
+}
+.form-disclaimer-light {
+  color: #ffffff;
 }
 .form-disclaimer a {
   text-decoration: underline;
@@ -737,6 +749,12 @@ header {
 }
 .header-callback-btn {
   margin-right: -7px;
+}
+.header-callback-btn:hover,
+.header-callback-btn:active,
+.header-callback-btn:focus {
+  border: 7px solid rgba(180, 180, 180, 0.2);
+  background-color: rgba(180, 180, 180, 0.4);
 }
 /*=MENU=*/
 .header-menu-btn {
@@ -1021,9 +1039,10 @@ header {
 }
 .form-section {
   background-image: url("../img/bg-form.jpg");
-  background-position: center top;
-  background-repeat: repeat-y;
-  background-color: #2ba1f4;
+  background-position: center center;
+}
+.table-wrapper {
+  overflow: auto;
 }
 /*Card*/
 .card-wrapper {
@@ -1259,29 +1278,6 @@ video {
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
-}
-.video-wrapper {
-  position: relative;
-}
-.video-wrapper .video-play-btn {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  margin-left: -57px;
-  margin-top: -48px;
-  width: 114px;
-  height: 96px;
-  cursor: pointer;
-}
-.video-wrapper .video-play-btn img {
-  display: block;
-  max-width: 100%;
-}
-.video-wrapper .video-play-btn:hover,
-.video-wrapper .video-play-btn:active,
-.video-wrapper .video-play-btn:focus {
-  opacity: 0.8;
 }
 /*=FOOTER=*/
 footer {
@@ -1735,6 +1731,229 @@ button.modal-close:hover {
 .articles-btn {
   margin-top: 40px;
 }
+/*=CATALOG=*/
+.catalog-menu-item {
+  border-bottom: 1px solid #ffffff;
+}
+.catalog-menu-item:last-child {
+  border-bottom: none;
+}
+.catalog-menu-item.active .catalog-menu-link {
+  background-color: #675f5b;
+}
+.catalog-menu-link {
+  display: block;
+  padding: 10px 20px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
+  background-color: #8d847f;
+}
+.catalog-menu-link:hover,
+.catalog-menu-link:active,
+.catalog-menu-link:focus,
+.catalog-menu-link.active {
+  background-color: #675f5b;
+}
+.product-card {
+  display: block;
+  height: 100%;
+}
+.product-card-img-wrapper {
+  height: 170px;
+  background-color: #ececec;
+  background-image: url("../img/ico-noimg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.product-card-img-wrapper[style^="background"] {
+  background-size: cover;
+}
+.product-card-content {
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 20px 10px 110px;
+  height: -webkit-calc(-70%);
+  height: calc(100% - 170px);
+  background-color: #ffffff;
+}
+.product-card-title {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+}
+.product-card-text {
+  overflow: hidden;
+  display: -webkit-box;
+  font-size: 14px;
+  max-height: 63px;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+.product-card-btn {
+  position: absolute;
+  bottom: 30px;
+  left: 10px;
+  right: 10px;
+  width: auto;
+}
+.product-card:hover,
+.product-card:active,
+.product-card:focus {
+  -webkit-box-shadow: 0 14px 60px 2.04px rgba(53, 52, 48, 0.28);
+  -moz-box-shadow: 0 14px 60px 2.04px rgba(53, 52, 48, 0.28);
+  box-shadow: 0 14px 60px 2.04px rgba(53, 52, 48, 0.28);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+  transform: scale(1.05);
+}
+/*=PRODUCT PAGE=*/
+.product-slider-big {
+  margin-bottom: 15px;
+}
+.product-slide-big {
+  overflow: hidden;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: 100%;
+  max-height: 387px;
+}
+.product-slide-big img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+.product-slider-small-wrapper {
+  position: relative;
+}
+.product-slider-small-wrapper .swiper-button-prev {
+  left: -30px;
+}
+.product-slider-small-wrapper .swiper-button-next {
+  right: -30px;
+}
+.product-slide-small {
+  overflow: hidden;
+  position: relative;
+  height: 116px;
+  cursor: pointer;
+}
+.product-slide-small img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.product-characteristics {
+  padding-left: 15px;
+}
+.product-table th {
+  padding: 15px 25px 15px 0;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: left;
+}
+.product-table td {
+  padding: 15px 0 15px 25px;
+  font-size: 14px;
+  text-align: left;
+}
+.product-description {
+  margin-top: 60px;
+}
+/*=CONTACTS=*/
+.contacts {
+  margin-bottom: 40px;
+}
+.contacts-item-wrapper {
+  margin-bottom: 30px;
+}
+.contacts-item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.contacts-item-img-wrapper {
+  position: relative;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: -8px;
+  margin-left: -8px;
+  margin-right: 20px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border: 8px solid transparent;
+  width: 126px;
+  height: 126px;
+  background-color: #c10000;
+  background-clip: content-box;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+  -o-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+}
+.contacts-item-img-wrapper::before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-image: url("../img/sprite.png");
+  background-repeat: no-repeat;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.contacts-item-img-wrapper-1::before {
+  width: 50px;
+  height: 64px;
+  background-position: 0 -25px;
+}
+.contacts-item-img-wrapper-2::before {
+  width: 64px;
+  height: 64px;
+  background-position: -56px -24px;
+}
+.contacts-item-img-wrapper-3::before {
+  width: 68px;
+  height: 64px;
+  background-position: -123px -25px;
+}
+.contacts-item-text {
+  font-size: 16px;
+}
+.contacts-item:hover .contacts-item-img-wrapper {
+  border: 8px solid rgba(193, 0, 0, 0.38);
+}
 /*=404=*/
 .error-wrapper {
   display: -webkit-box;
@@ -1882,6 +2101,13 @@ button.modal-close:hover {
   .service-title {
     font-size: 16px;
   }
+  /*=PRODUCT PAGE=*/
+  .product-table th {
+    padding: 15px 15px 15px 0;
+  }
+  .product-table td {
+    padding: 15px 0 15px 15px;
+  }
   /*=404=*/
   .error-title {
     font-size: 254px;
@@ -1985,6 +2211,27 @@ button.modal-close:hover {
     margin-left: auto;
     margin-right: auto;
   }
+  /*=CATALOG=*/
+  .catalog-menu {
+    margin-bottom: 50px;
+  }
+  /*=CONTACTS=*/
+  .contacts-item {
+    display: block;
+  }
+  .contacts-item-img-wrapper {
+    margin: 0 auto 20px;
+  }
+  .contacts-item-text {
+    text-align: center;
+  }
+  /*=PRODUCT PAGE=*/
+  .product-slider {
+    margin-bottom: 60px;
+  }
+  .product-characteristics {
+    padding-left: 0;
+  }
   /*=404=*/
   .error-wrapper {
     display: block;
@@ -2024,6 +2271,11 @@ button.modal-close:hover {
     margin-bottom: 55px;
     font-size: 36px;
   }
+  /*=LINKS&FORMS=*/
+  .form-group-btn {
+    margin-bottom: 30px;
+  }
+  /*forms*/
   /*=HEADER=*/
   .header-container {
     display: block;
@@ -2286,13 +2538,13 @@ button.modal-close:hover {
     -webkit-border-radius: 29px;
     -moz-border-radius: 29px;
     border-radius: 29px;
-    width: 58px;
+    width: 54px;
   }
   .pagination .page-next {
     -webkit-border-radius: 29px;
     -moz-border-radius: 29px;
     border-radius: 29px;
-    width: 58px;
+    width: 54px;
   }
   /*=MENU=*/
   .header-menu {
@@ -2353,6 +2605,34 @@ button.modal-close:hover {
     margin: 0 10px 0 -8px;
   }
   .advantage-text {
+    text-align: left;
+  }
+  /*=PRODUCT PAGE=*/
+  .product-slider-small-wrapper .swiper-button-prev {
+    left: 0;
+  }
+  .product-slider-small-wrapper .swiper-button-next {
+    right: 0;
+  }
+  .product-table th {
+    padding: 10px 10px 10px 0;
+  }
+  .product-table td {
+    padding: 10px 0 10px 10px;
+  }
+  /*=CONTACTS=*/
+  .contacts-item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 290px;
+    margin: 0 auto;
+  }
+  .contacts-item-img-wrapper {
+    margin: 0 10px 0 -8px;
+  }
+  .contacts-item-text {
     text-align: left;
   }
 }
